--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cooktopia",
+  "homepage":"https://falguni-lakdawala.github.io/cooktopia/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
