Changes to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cooktopia",
-  "homepage": "https://falguni-lakdawala.github.io/cooktopia/",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "aws-deploy": "npm run build && aws s3 sync build/ s3://cooktopia"
   },
   "browserslist": {
     "production": [
