--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Build React App
         run: npm install && CI='' npm run build
       - name: Deploy app build to S3 bucket
-        run: aws s3 sync ./build/ s3://cooktopia
+        run: aws s3 sync ./build/ s3://cooktopia --delete
