Bug fixes in recipesearch page

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 REACT_APP_serviceid='service_hbssqyj'
 REACT_APP_templateid='template_dixx14n'
 REACT_APP_userid='user_tYVc5NViow9KFYEDBSjEr'
+
+
+REACT_APP_apiKey='AIzaSyBEZaUsQCESLG9yXUuZah4RDU7pEDHohr8'
+REACT_APP_authDomain='cooktopia-7c13d.firebaseapp.com'
+REACT_APP_projectID='cooktopia-7c13d'
+REACT_APP_storageBucket='cooktopia-7c13d.appspot.com'
+REACT_APP_messagingSenderID='1011693878172'
+REACT_APP_appID='1:1011693878172:web:012641b3d7c3c824802659'
