--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "devDependencies": {
     "gh-pages": "^3.2.3",
     "react-icons": "^4.2.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
